          besides Blast, instead of being ignored. Added tests for all moved methods
          using HMMER outputs and run the full test suite and everything pass [fjossandon]
    * Bio::SeqIO::MultiFile
        - Autodetection of file format [fangly]
    * Bio::Tools::GuessSeqFormat:
        - Format detection from non-seekable filehandles such as STDIN [fangly]

    [Bug fixes]

    * Abstract: Fixed ActivePerl incapability of removing temporary files
      because of problems closing tied filehandles [fjossandon]
    * IndexedBase: For Windows' ActivePerl, several LocalDB tests were failing
      because ActivePerl were producing a ".index.pag" and ".index.dir"
      files instead of a single ".index" file (like Strawberry Perl).
      Now those temporary files are correctly considered and deleted. [fjossandon]
    * Test files: Added missing module requirements (DB_File and Data::Stag)
      to several tests files that were failing because those modules were
      not present. Now those test files are correctly skipped instead. [fjossandon]
    * Blast: Added support to changes in bl2seq from BLAST+ output, which
      now uses "Subject=" instead of ">" to start hit lines [yschensandiego]
    * Phylip: Return undef in "next_aln" at file end to avoid
      an infinite loop [yschensandiego]
    * HMMER3: When a hit description is too long, it is truncated in
      the Scores table. In those cases, the more complete description from
      the Annotation line (>>) will be used [fjossandon]
    * GenericHSP: Added '.' to gap symbols in "_pre_gaps" (except for ERPIN),
      since it is now used by HMMER3 format in alignments [fjossandon]
    * GenericHit: Changed "frac_aligned_query" and "frac_aligned_hit"
      to return undef if the query/hit length is unknown (like in some
      HMMER outputs), to avoid division by 0 crashes. Also "query_length"
      now is set to 0 if its undefined, to be consistent with hit "length" [fjossandon]